--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
 <body>
 
-<img src="images/6.jpg" width="300px" height="300px" />
-
-<p>We are collecting raw data beyond the laboratory. Observation, participation in the life of the group, collective discussions, self-analysis, life-histories, ability to see and visualize things that other individuals visiting the area of study may fail to notice, new ideas, concepts, and things which they may not have seen in their own culture, the absorption of those ideas, free-living wild animals, to get beneath the surface, implicit practical logic—a practical sense—and bodily dispositions, "feel for the game" (the "feel" being, roughly, habitus, and the "game" being the field).
-</p>
+<img src="images/6.jpg" style="width:300px; height:300px; margin:auto; border:1px-solid-gray"  />
 
 </body>
 
