--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<img src="images/6.jpg" style="width:300px; height:300px; margin:auto; border:1px-solid-gray"  />
+<img src="images/6.jpg" style="width:300px; height:300px; display: block; margin:auto; border:1px-solid-gray"  />
 
 </body>
 
