--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 
-<img src="images/6.jpg" style="width:300px; height:300px; display: block; margin:auto; border:1px-solid-gray"  />
-
+<img src="images/6.jpg" style="width:50%; height:50%; display:block; margin:auto"  />
+  
 </body>
 
 </html>
