--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=browser-width, initial-scale=1'>
-  <meta property="og:image" content="images/6.jpg" />
+  <meta property="og:image" content="images/fldwrk.jpg" />
   <title>fldwrk</title>
   <link href='index.css' rel='stylesheet' type='text/css'/>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200" rel="stylesheet">
@@ -11,7 +11,23 @@
 
 <body>
 
-<img src="images/6.jpg" style="width:50%; height:50%; display:block; margin:auto"  />
+  <img src="images/fldwrk.jpg" style="width:100px; height:100px; display:block; margin:auto"  />
+  
+  <h1>
+    FLDWRK // F13LDW3RK // V3LDW3RK // 
+  </h1>
+  
+  <h2>
+    Rave + Research Collective
+  </h2>
+  
+  <p>
+    is: collective, platform, label, codename, tag, family, self-selecting curator, host, collaborator, experiment, scene
+    isnot: commercial, exclusive, brand, gatekeeper, club, pay-to-play
+    
+    functions:
+    rave { A user-created experience. music, dance, lights, visual projection, community, departure from the ordinary }
+  </p>
   
 </body>
 
