--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <img src="images/fldwrk.jpg" style="width:100px; height:100px; display:block; margin:auto"  />
+  <img src="images/fldwrk.jpg" style="width:100px; height:100px; display:block;"  />
   
   <h1>
     FLDWRK // F13LDW3RK // V3LDW3RK // 
