--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=browser-width, initial-scale=1'>
-  <meta property="og:image" content="images/fldwrk.jpg" />
+  <meta property="og:image" content="fldwrk.jpg" />
   <title>fldwrk</title>
   <link href='index.css' rel='stylesheet' type='text/css'/>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200" rel="stylesheet">
@@ -11,7 +11,7 @@
 
 <body>
 
-  <img src="images/fldwrk.jpg" style="width:100px; height:100px; display:block;"  />
+  <img src="fldwrk.jpg" style="width:100px; height:100px; display:block;"  />
   
   <h1>
     FLDWRK // F13LDW3RK // V3LDW3RK // 
