--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<div class="container">
 
   <img src="fldwrk.jpg" style="width:100px; height:100px; display:block;"  />
   
@@ -55,7 +56,7 @@
     V -Philadelphia
     
   </p>
-  
+</div>
 </body>
 
 </html>
