--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
 <tr>
   <td colspan="3">
-    <img src="images/fldwrk.jpg" style="width:300px"  />
+      <img src="images/fldwrk.jpg" style=" width:100px;"  />
   </td>
-
 </tr>
 
 <tr>
@@ -61,18 +60,17 @@
 
 
 <tr>
-  <td>
+  <td colspan="2">
     FLDWRK is :: 
     found spaces - open movement - deconstructed - reworked - shared - 
     scene - placemaker - platform - tool
-  </td>
-
-  <td>
+    <br>
+    </br>
     WE are here to preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
   </td>
 
-  <td>
-    <img src="images/topo.jpg" style="width:300px"  />
+  <td rowspan="2">
+    <img src="images/topo.jpg" style="width:100%" />
   </td>
 </tr>
 
@@ -80,13 +78,20 @@
 <tr>
   <td>
     fieldwork is the collection of raw data outside a laboratory
-    observe animals interacting with their environments
-    interview or observe people in their natural environments to learn their languages, folklore, and social structures
-    informal interviews, direct observation, participation in the life of the group, collective discussions, analyses of personal documents produced within the group, self-analysis, results from activities undertaken off- or on-line, and life-histories.
+    <ul>
+      <li>informal interviews</li>
+      <li>direct observation</li>
+      <li>participation in the life of the group</li>
+      <li>discussions</li>
+      <li>analyses of personal documents produced within the group</li>
+      <li>results from activities undertaken off- or on-line</li>
+      <li>life-histories</li>
+    </ul>
+
   </td>
 
-  <td colspan="2">
-    ability to see and visualize things that other individuals visiting the area of study may fail to notice. The more open researchers are to new ideas, concepts, and things which they may not have seen in their own culture, the better will be the absorption of those ideas. Better grasping of such material means a better understanding of the forces of culture operating in the area and the ways they modify the lives of the people under study.
+  <td>
+    [The] ability to see and visualize things that other individuals visiting the area of study may fail to notice. The more open researchers are to new ideas, concepts, and things which they may not have seen in their own culture, the better will be the absorption of those ideas. Better grasping of such material means a better understanding of the forces of culture operating in the area and the ways they modify the lives of the people under study.
   </td>
 </tr>
 
@@ -99,13 +104,13 @@
 
 <tr>
 <td>
+  Observe animals interacting with their environments
 </td>
 
-<td>
+<td colspan="2">
+  Interview or observe people in their natural environments to learn their languages, folklore, and social structures
 </td>
 
-<td>
-</td>
 </tr>
 
 
@@ -113,9 +118,11 @@
   <td>
     Observable details
   </td>
-  <td colspan="2">
-    and more hidden details (like taboo behavior) are more easily observed and interpreted //
-    can discover discrepancies between //
+  <td>
+    ...and more hidden details (like taboo behavior) are more easily observed and interpreted
+  </td>
+  <td>
+    [Thus we] can discover discrepancies between //
     (the formal system) and what actually does happen, or between different aspects of the formal system
     or between conscious representations and behavior.
   </td>
@@ -123,10 +130,10 @@
 
 <tr>
   <td colspan="2">
-    may include the undertaking of broad area surveys (including aerial surveys); of more localised site surveys (including photographic, drawn, and geophysical surveys, and exercises such as fieldwalking); and of excavation
+    May include the undertaking of broad area surveys (including aerial surveys); of more localised site surveys (including photographic, drawn, and geophysical surveys, and exercises such as fieldwalking); and of excavation.
   </td>
   <td>
-    studying of free-living wild animals in which the subjects are observed in their natural habitat, without changing, harming, or materially altering the setting or behavior of the animals under study.
+    Studying of free-living wild animals in which the subjects are observed in their natural habitat, without changing, harming, or materially altering the setting or behavior of the animals under study.
   </td>
 </tr>
 
