--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <tr>
   <td colspan="3">
-      <img src="images/fldwrk.jpg" style=" width:100px;"  />
+      <img src="images/fldwrk.jpg" style="width:100px;"  />
+      <img src="images/stencil_full.jpg" style="width:200px; float:right;"  />
   </td>
 </tr>
 
@@ -43,18 +44,23 @@
       }
     }, 1000);
     </script>
+
+  <h3>A FLDWRK EVENT</h3>
+  Secret Location
+  Philadelphia, PA 
   </td>
 
   <td>
-    <a href="https://www.instagram.com/fld_wrk">RSVP @fld_wrk</a>
+    Open Call for Art: Contact
+    <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
   </td>
 
   <td>
-    e-mail {fldwrk@pm.me}
+    e-mail {<a href="mailto:fldwrk@pm.me">fldwrk@pm.me</a>}
 
-    instagram {@fld_wrk} * 
+    instagram {<a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>} 
 
-    word-of-mouth {?}
+    word-of-mouth {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">?</a>}
   </td>
 </tr>
 
@@ -74,9 +80,34 @@
   </td>
 </tr>
 
+<tr>
+<td>
+  <ul>
+    <li>Philadelphia, PA</li>
+    <li>Durango, CO</li>
+    <li>Ithaca, NY</li>
+    <li>Santa Fe, NM</li>
+  </ul>
+</td>
+
+<td>
+  <a href="eyeblind/index.html">
+  <img src="images/eyeblind.jpg" style="width:100%;"/>
+  </a>
+  Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
+</td>
+</tr>
+
 
 <tr>
-  <td>
+  <td colspan="3">
+    <img src="images/Screenshot 2022-12-01 152741.jpg" style="max-width:100%"/>
+  </td>
+</tr>
+
+
+<tr>
+  <td colspan="2">
     fieldwork is the collection of raw data outside a laboratory
     <ul>
       <li>informal interviews</li>
@@ -87,7 +118,6 @@
       <li>results from activities undertaken off- or on-line</li>
       <li>life-histories</li>
     </ul>
-
   </td>
 
   <td>
