--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
 <tr>
   <td>
+    Coming Soon
+
+    <h3>A FLDWRK EVENT</h3>
+
     <p id="clock"></p>
     <script>
     var countDownDate = new Date("December 17, 2022 23:00:00").getTime();
@@ -45,7 +49,6 @@
     }, 1000);
     </script>
 
-  <h3>A FLDWRK EVENT</h3>
   Secret Location
   Philadelphia, PA 
   </td>
@@ -53,20 +56,29 @@
   <td>
     Open Call for Art: Contact
     <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
+    
+    <ul>
+      <li>Philadelphia, PA</li>
+      <li>Durango, CO</li>
+      <li>Ithaca, NY</li>
+      <li>Santa Fe, NM</li>
+    </ul>
   </td>
 
   <td>
-    e-mail {<a href="mailto:fldwrk@pm.me">fldwrk@pm.me</a>}
+    <ul>
+      <li>e-mail {<a href="mailto:fldwrk@pm.me">fldwrk@pm.me</a>}</li>
 
-    instagram {<a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>} 
+      <li>instagram {<a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>}</li> 
 
-    word-of-mouth {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">?</a>}
+      <li>word-of-mouth {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">?</a>}</li>
+    </ul>
   </td>
 </tr>
 
 
 <tr>
-  <td colspan="2">
+  <td colspan="3">
     FLDWRK is :: 
     found spaces - open movement - deconstructed - reworked - shared - 
     scene - placemaker - platform - tool
@@ -74,34 +86,34 @@
     </br>
     WE are here to preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
   </td>
-
-  <td rowspan="2">
-    <img src="images/topo.jpg" style="width:100%" />
-  </td>
 </tr>
 
 <tr>
 <td>
-  <ul>
-    <li>Philadelphia, PA</li>
-    <li>Durango, CO</li>
-    <li>Ithaca, NY</li>
-    <li>Santa Fe, NM</li>
-  </ul>
-</td>
-
-<td>
   <a href="eyeblind/index.html">
-  <img src="images/eyeblind.jpg" style="width:100%;"/>
+  <img src="images/eyeblind.jpg" />
   </a>
   Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
 </td>
+
+<td colspan="2">
+  <img src="images/stencil_abbrev.jpg" />
+
+  The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
+  In the Field, a more authentic engagement with space and people becomes possible.
+  <br/>FLDWRK is not for profit.
+  <br/>FLDWRK is anti-commodification. 
+  <br/>FLDWRK is not a brand.
+  <br/>FLDWRK is not brute force.
+  <br/>FLDWRK is the subtle emergence.
+</td>
+
 </tr>
 
 
 <tr>
   <td colspan="3">
-    <img src="images/Screenshot 2022-12-01 152741.jpg" style="max-width:100%"/>
+    <img src="images/philadelphiamap.jpg" />
   </td>
 </tr>
 
