--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
 </tr>
 
 <tr>
-  <td>
-    Coming Soon
-
-    <h3>A FLDWRK EVENT</h3>
+  <td style="background-color:dimgray">
+    <h1>EVENT NXT</h1>
 
     <p id="clock"></p>
     <script>
@@ -54,23 +52,25 @@
   </td>
 
   <td>
-    Open Call for Art: Contact
-    <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
+    <h3>Open Call</h3>
+    Send art and project proposals to <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
+    <br/>
+    <br/>
     
     <ul>
       <li>Philadelphia, PA</li>
       <li>Durango, CO</li>
       <li>Ithaca, NY</li>
       <li>Santa Fe, NM</li>
+      <li>Virtually</li>
     </ul>
   </td>
 
   <td>
+    <h3>Contact</h3>
     <ul>
       <li>e-mail {<a href="mailto:fldwrk@pm.me">fldwrk@pm.me</a>}</li>
-
       <li>instagram {<a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>}</li> 
-
       <li>word-of-mouth {<a href="https://iwillnotbeconsumed.wordpress.com/guerilla-art-practices-and-impact/">?</a>}</li>
     </ul>
   </td>
