--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
 <tr>
   <td colspan="3">
     FLDWRK is :: 
-    found spaces - open movement - deconstructed - reworked - shared - 
-    scene - placemaker - platform - tool
+    found spaces - open movement - deconstructed work - shared scene - placemaker - platform - tool
     <br>
     </br>
     WE are here to preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
@@ -89,25 +88,24 @@
 </tr>
 
 <tr>
-<td>
-  <a href="eyeblind/index.html">
-  <img src="images/eyeblind.jpg" />
-  </a>
-  Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
-</td>
+  <td>
+    <a href="eyeblind/index.html">
+    <img src="images/eyeblind.jpg" />
+    </a>
+    Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
+  </td>
 
-<td colspan="2">
-  <img src="images/stencil_abbrev.jpg" />
+  <td colspan="2">
+    <img src="images/stencil_abbrev.jpg" />
 
-  The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
-  In the Field, a more authentic engagement with space and people becomes possible.
-  <br/>FLDWRK is not for profit.
-  <br/>FLDWRK is anti-commodification. 
-  <br/>FLDWRK is not a brand.
-  <br/>FLDWRK is not brute force.
-  <br/>FLDWRK is the subtle emergence.
-</td>
-
+    The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
+    In the Field, a more authentic engagement with space and people becomes possible.
+    <br/>FLDWRK is not for profit.
+    <br/>FLDWRK is anti-commodification. 
+    <br/>FLDWRK is not a brand.
+    <br/>FLDWRK is not brute force.
+    <br/>FLDWRK is the subtle emergence.
+  </td>
 </tr>
 
 
@@ -119,9 +117,10 @@
 
 
 <tr>
-  <td colspan="2">
-    fieldwork is the collection of raw data outside a laboratory
-    <ul>
+  <td colspan="3">
+    Fieldwork is the collection of raw data outside a laboratory:
+    <br/>
+    <ul style="list-style-type: square; padding:20px;">
       <li>informal interviews</li>
       <li>direct observation</li>
       <li>participation in the life of the group</li>
@@ -130,59 +129,29 @@
       <li>results from activities undertaken off- or on-line</li>
       <li>life-histories</li>
     </ul>
-  </td>
+    <br/>
+    [The] ability to see and visualize things that other individuals visiting the area of study may fail to notice... 
+    The more open researchers are to new ideas, concepts, and things which they may not have seen in their own culture, the better will be the absorption of those ideas. Better grasping of such material means a better understanding of the forces of culture operating in the area and the ways they modify the lives of the people under study.
 
-  <td>
-    [The] ability to see and visualize things that other individuals visiting the area of study may fail to notice. The more open researchers are to new ideas, concepts, and things which they may not have seen in their own culture, the better will be the absorption of those ideas. Better grasping of such material means a better understanding of the forces of culture operating in the area and the ways they modify the lives of the people under study.
-  </td>
-</tr>
-
-
-<tr>
-  <td colspan="3">
     When humans themselves are the subject of study, protocols must be devised to reduce the risk of observer bias and the acquisition of too theoretical or idealized explanations of the workings of a culture.
-  </td>
-</tr>
 
-<tr>
-<td>
-  Observe animals interacting with their environments
-</td>
+    [Researchers] observe animals interacting with their environments...
 
-<td colspan="2">
-  Interview or observe people in their natural environments to learn their languages, folklore, and social structures
-</td>
+    interview or observe people in their natural environments to learn their languages, folklore, and social structures
 
-</tr>
+    [Collect] observable details
 
+    ...and more hidden details (like taboo behavior) are more easily observed and interpreted.
 
-<tr>
-  <td>
-    Observable details
-  </td>
-  <td>
-    ...and more hidden details (like taboo behavior) are more easily observed and interpreted
-  </td>
-  <td>
-    [Thus we] can discover discrepancies between //
+    [Thus we] can discover discrepancies between 
     (the formal system) and what actually does happen, or between different aspects of the formal system
     or between conscious representations and behavior.
-  </td>
-</tr>
 
-<tr>
-  <td colspan="2">
-    May include the undertaking of broad area surveys (including aerial surveys); of more localised site surveys (including photographic, drawn, and geophysical surveys, and exercises such as fieldwalking); and of excavation.
-  </td>
-  <td>
-    Studying of free-living wild animals in which the subjects are observed in their natural habitat, without changing, harming, or materially altering the setting or behavior of the animals under study.
-  </td>
-</tr>
+    [This] may include the undertaking of broad area surveys (including aerial surveys); of more localised site surveys (including photographic, drawn, and geophysical surveys, and exercises such as fieldwalking); and of excavation.
 
+    [We are] studying of free-living wild animals in which the subjects are observed in their natural habitat, without changing, harming, or materially altering the setting or behavior of the animals under study.
 
-<tr>
-  <td colspan="3">
-    The objective of F13LD+W0RK is to get beneath the surface
+    The objective of F13LD+W0RK is to get beneath the surface.
   </td>
 </tr>
 
