--- a/index.html
+++ b/index.html
@@ -25,6 +25,36 @@
 </tr>
 
 <tr>
+  <td>
+    <a href="./library/index.html;">
+      lib
+    </a>
+  </td>
+
+  <td>
+    rare
+  </td>
+
+  <td>
+    artfkt
+  </td>
+</tr>
+
+<tr>
+  <td>
+    space
+  </td>
+
+  <td>
+    audio
+  </td>
+
+  <td>
+    geo
+  </td>
+</tr>
+
+<tr>
   <td style="background-color:dimgray">
     <h1>EVENT NXT</h1>
 
@@ -104,7 +134,6 @@
     <br/>FLDWRK is anti-commodification. 
     <br/>FLDWRK is not a brand.
     <br/>FLDWRK is not brute force.
-    <br/>FLDWRK is the subtle emergence.
   </td>
 </tr>
 
