--- a/d1nn3r/index.html
+++ b/d1nn3r/index.html
@@ -39,16 +39,14 @@
         In recognition of your artistic achievements, WE invite you to dine with us this Saturday evening, the 25th of February.
       </p>
       <p>
+        You may bring the tools of your trade.
+      </p>
+      <p>
+        Dress comfortably. Be discreet. <a href="mailto:fldwrk@pm.me">RSVP.</a> <br>
+      </p>
+      <p>
         N. 12th & Noble
         8pm Eastern Time
-      </p>
-      <p>
-        The tools of your trade
-        and comfortable dress 
-        are suggested.
-      </p>
-      <p>
-        Be discreet.
       </p>
       <p style="color: black; text-align: center;;">
         &gt; &gt; &gt; FREE ROTISSERIE CHICKEN &lt; &lt; &lt;
