--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("December 17, 2022 23:00:00").getTime();
+    var countDownDate = new Date("February 25, 2023 20:00:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
@@ -79,11 +79,13 @@
 
   Secret Location
   Philadelphia, PA 
+
+  [[for safety and artistic reasons, this event is not public]]
   </td>
 
   <td>
     <h3>Open Call</h3>
-    Send art and project proposals to <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
+    Send comments, art, and project proposals to <a href="https://www.instagram.com/fld_wrk">@fld_wrk</a>
     <br/>
     <br/>
     
@@ -118,11 +120,9 @@
 </tr>
 
 <tr>
-  <td>
-    <a href="eyeblind/index.html">
-    <img src="images/eyeblind.jpg" />
-    </a>
-    Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
+  <td rowspan="2">
+    <img src="images/banner.jpg" style="filter:none; padding:auto;"/>
+    Src anon
   </td>
 
   <td colspan="2">
@@ -130,17 +130,40 @@
 
     The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
     In the Field, a more authentic engagement with space and people becomes possible.
+    <br/>
     <br/>FLDWRK is not for profit.
     <br/>FLDWRK is anti-commodification. 
     <br/>FLDWRK is not a brand.
     <br/>FLDWRK is not brute force.
+    <br/>
+    <ol>
+      <li>Foregiveness over permission</li>
+      <li>Quality over quantity</li>
+      <li>Innovation over perfection</li>
+    </ol>
   </td>
 </tr>
 
 
 <tr>
-  <td colspan="3">
+  <td colspan="2">
+    Illicit Placemaking - The art and practice of creating social, artistic, and environmental conditions out of spaces, especially found, neglected, or liminal spaces, and especially when that condition is unexpected, deviant, or creative. 
+    Places may include: shopping malls, tunnels, waterfalls, astronomical observatories, soil factories, railyards, badlands, garages, warehouses, etc.
+    Conditions may include raving, creating and sharing works of visual, sonic, performance or other art, and celebrating community.
+    Interventions may be physical, architectural, virtual, real, or implied, but will invariably augment the space's perceived function, utility, or creative potential.
+  </td>
+</tr>
+
+
+<tr>
+  <td colspan="2">
     <img src="images/philadelphiamap.jpg" />
+  </td>
+  <td>
+    <a href="eyeblind/index.html">
+    <img src="images/eyeblind.jpg" />
+    </a>
+    Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
   </td>
 </tr>
 
