--- a/d1nn3r/index.html
+++ b/d1nn3r/index.html
@@ -43,10 +43,11 @@
       </p>
       <p>
         Dress comfortably. Be discreet. <a href="mailto:fldwrk@pm.me">RSVP.</a> <br>
+        Note any dietary restrictions.
       </p>
       <p>
-        N. 12th & Noble
-        8pm Eastern Time
+        N. 12th & Noble <br>
+        8pm Eastern Time.
       </p>
       <p style="color: black; text-align: center;;">
         &gt; &gt; &gt; FREE ROTISSERIE CHICKEN &lt; &lt; &lt;
