revised d1nn3r invitation

--- a/d1nn3r/invitation.html
+++ b/d1nn3r/invitation.html
@@ -18,8 +18,7 @@
       padding: 10%;
     }
     h2, p {
-      text-align: justify;
-      margin: 20px;
+      text-align: center;
     }
   </style>
 
@@ -32,26 +31,26 @@
   </div>
 
   <div style="padding:50px; margin:auto;">
-    <div style="border: 1px solid white;">
+    <div style="border: 1px solid white; padding: 20px;">
       <h2>
-        Dear Esteemed Guest,
+        Your presence is requested.
       </h2></br>
       <p>
-        We regret to inform you we have elected to postpone tonight's gathering. 
-        This decision is not made casually, and comes in light of some unfortunate news: our guest of honor was recently hospitalized.
+        In recognition of your artistic achievements, WE invite you to dine with us this Saturday evening, the 25th of February.
       </p>
       <p>
-        He is a prolific artist and a dear friend of ours, and we want to create an experience he can enjoy alongside all of us.
+        You may bring the tools of your trade.
       </p>
       <p>
-        If you have the means, we are asking our community for donations via <a href="https://www.gofundme.com/f/jdqn7-nicos-fund">this GoFundMe</a> campaign. 
-        Additionally, if you would like to donate your <em>talent</em>, in the form of a piece of your art, &gt;we&lt; would like to facilitate an auction from which all proceeds would go toward his recovery.
+        Dress comfortably. Be discreet. <a href="mailto:fldwrk@pm.me">RSVP.</a> <br>
+        Note any dietary restrictions.
       </p>
       <p>
-        Thank you for understanding. We shall be in touch again soon, but for now let this be a token of our admiration and a hint of things to come.
+        N. 12th & Noble <br>
+        8pm Eastern Time.
       </p>
-      <p style="text-align:center; margin:50px;">
-        &gt; &gt; &gt; FLD_WRK &lt; &lt; &lt;
+      <p style="color: black; text-align: center;;">
+        &gt; &gt; &gt; FREE ROTISSERIE CHICKEN &lt; &lt; &lt;
       </p>
     </div>
   </div>
