--- a/index.html
+++ b/index.html
@@ -56,11 +56,18 @@
 
 <tr>
   <td style="background-color:dimgray">
-    <h1>EVENT NXT</h1>
+    <h1>NXT EVENT</h1>
+
+    <!-- <button data-tally-open="mRM4Lv" data-tally-width="460px"> -->
+    <button>
+      <a href="https://tally.so/r/mRM4Lv">
+        COPING MECHANISM // ADVANCE ACCESS
+      </a>
+    </button>
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("February 25, 2023 20:00:00").getTime();
+    var countDownDate = new Date("August 12, 2023 21:00:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
@@ -78,9 +85,7 @@
     </script>
 
   Secret Location
-  Philadelphia, PA 
-
-  [[for safety and artistic reasons, this event is not public]]
+  Philadelphia, PA
   </td>
 
   <td>
@@ -134,7 +139,6 @@
     <br/>FLDWRK is not for profit.
     <br/>FLDWRK is anti-commodification. 
     <br/>FLDWRK is not a brand.
-    <br/>FLDWRK is not brute force.
     <br/>
     <ol>
       <li>Foregiveness over permission</li>
@@ -213,6 +217,8 @@
 <!-- JQuery -->
 <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous'></script>
 
+<!-- Form (Tally) -->
+<script async src="https://tally.so/widgets/embed.js"></script>
 
 </body>
 </html>
