--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@
 
     <!-- <button data-tally-open="mRM4Lv" data-tally-width="460px"> -->
     <button>
-      <a href="https://tally.so/r/mRM4Lv">
-        COPING MECHANISM // ADVANCE ACCESS
+      <a href="">
+        Protest Police Oppression of Underground Artists
       </a>
     </button>
+    <p>Saturday Aug 26 9am</p>
+    <p>Rittenhouse Park, Philadelphia</p>
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("August 12, 2023 21:00:00").getTime();
+    var countDownDate = new Date("August 26, 2023 9:00:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
@@ -84,8 +86,6 @@
     }, 1000);
     </script>
 
-  Secret Location
-  Philadelphia, PA
   </td>
 
   <td>
