--- a/buckley/index.html
+++ b/buckley/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'>
   <meta name='viewport' content='width=browser-width, initial-scale=1'>
   <meta property="og:image" content="images/fldwrk.jpg" />
-  <title>D1NN3R CLUB</title>
+  <title>BUCKL3Y P4RK</title>
   
   <!-- Stylesheets -->
   <link href='../index.css' rel='stylesheet' type='text/css'/>
