--- a/buckley/index.html
+++ b/buckley/index.html
@@ -28,13 +28,13 @@
 
 <div style="text-align: center;">
   <div style='padding:50px; margin:auto;'>
-    <a href="../index.html"><img src="../images/fldwrk.jpg" style="max-width:200px;"  /> </a>
+    <a href="../index.html"><img src="./Primal Flow v1.jpeg" style="width:100%; filter: grayscale(0);"/> </a>
   </div>
 
   <div style="padding:50px; margin:auto;">
     <div style="border: 1px solid white;">
       <h2>
-        Coming Soon
+        &gt; DURANGO COLORADO &lt;
       </h2></br>
       <p>
         Date: September 16, 2023
@@ -45,6 +45,36 @@
       <p>
         Location: Buckley Park / Durango, Colorado
       </p>
+      <p>
+        Come join us at Buckley Park on Saturday, September 16 to tap into your primal self, deepen your relationship with your body, and your community at our free yoga class blending vinyasa and Primal Movement. This will be followed by several hours of live music, DJ performances, and social hours with food and drinks from local vendors.</br>
+      </p>
+      <ul style="text-align: left; margin:50px;">
+        <li>11:00 AM: Primal Flow Yoga with local instructor Bif</li>
+        <li>12:15 PM: Guided Meditation, Sound Healing, and other healing practices</li>
+        <li>1:00 - 5:00 PM: Social hours with food, drinks, music, dancing, and more!</li>
+        <li>9:00 PM: Afterparty at Roxy's</li>
+      </ul>
+      <p>
+        Thank you to our Sponsors!
+      </p>
+        <ul style="text-align:left; margin:50px;">
+         <li> - Hermosa Cafe </li>
+         <li> - Public House 701 </li>
+         <li> - Chimayo </li>
+         <li> - Roxy's </li>
+         <li> - The Alliance </li>
+         <li> - Hard Ketones </li>
+         <li> - Jimmy's Music Supply </li>
+         <li> - Ultrahouse Durango </li>
+         <li> - Love n' Juice </li>
+        </ul>
+      </br>
+        <hr>
+        <p>
+          Hi There! We're F13LDW0RK, a local non-profit organization with the goal of repurposing spaces, filling them with people and different forms of creative expression including art, movement, music, and more!
+        </p><p>
+          We operate almost entirely based on sponsorships and donations, we appreciate everyone's support!
+        </p>
       <p style="text-align:center; margin:50px;">
         &gt; &gt; &gt; FLD_WRK &lt; &lt; &lt;
       </p>
