--- a/index.html
+++ b/index.html
@@ -61,15 +61,16 @@
     <!-- <button data-tally-open="mRM4Lv" data-tally-width="460px"> -->
     <button>
       <a href="">
-        Protest Police Oppression of Underground Artists
+        ART / R4VE
       </a>
     </button>
-    <p>Saturday Aug 26 9am</p>
-    <p>Rittenhouse Park, Philadelphia</p>
+    <p>Saturday Nov 11 11:59pm</p>
+    <p>Undisclosed Location</p>
+    <p>Collab x Antiflowershowmovement / NZ / Osiris</p>
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("August 26, 2023 9:00:00").getTime();
+    var countDownDate = new Date("November 11, 2023 23:59:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
