--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
 
 <tr>
   <td style="background-color:dimgray">
-    <h1>NXT EVENT</h1>
+    <h1>EVENT</h1>
 
     <!-- <button data-tally-open="mRM4Lv" data-tally-width="460px"> -->
     <button>
       <a href="">
-        ART / R4VE
+        DAYRAVE
       </a>
     </button>
-    <p>Saturday Nov 11 11:59pm</p>
-    <p>Undisclosed Location</p>
-    <p>Collab x Antiflowershowmovement / NZ / Osiris</p>
+    <p>Saturday June 1 13:00</p>
+    <p>Copenhagen, Denmark</p>
+    <p></p>
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("November 11, 2023 23:59:00").getTime();
+    var countDownDate = new Date("June 1, 2024 13:00:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
@@ -82,7 +82,7 @@
       + minutes + "m " + seconds + "s ";
       if (distance < 0) {
         clearInterval(x);
-        document.getElementById("clock").innerHTML = "RAVE4EVER";
+        document.getElementById("clock").innerHTML = "COMPLETED";
       }
     }, 1000);
     </script>
@@ -96,6 +96,7 @@
     <br/>
     
     <ul>
+      <li>Copenhagen, DK</li>
       <li>Philadelphia, PA</li>
       <li>Durango, CO</li>
       <li>Ithaca, NY</li>
@@ -117,21 +118,6 @@
 
 <tr>
   <td colspan="3">
-    FLDWRK is :: 
-    found spaces - open movement - deconstructed work - shared scene - placemaker - platform - tool
-    <br>
-    </br>
-    WE are here to preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
-  </td>
-</tr>
-
-<tr>
-  <td rowspan="2">
-    <img src="images/banner.jpg" style="filter:none; padding:auto;"/>
-    Src anon
-  </td>
-
-  <td colspan="2">
     <img src="images/stencil_abbrev.jpg" />
 
     The "Field" is anywhere "outside the laboratory," i.e. beyond controlled environments of scripted and thinly imagined experience.
@@ -150,8 +136,61 @@
 </tr>
 
 
+<tr>  
+  <td colspan="1">
+    FLDWRK is :: 
+    found spaces - open movement - deconstructed work - shared scene - placemaker - platform - tool
+    <br>
+    </br>
+    WE are here to preserve DIY culture, resist power, protect place, broaden access, and increase freedom.
+  </td>
+
+  <td colspan="2" rowspan="2">
+    <span style="background:red; outline:1px solid gray">&nbsp</span>
+    <span style="background:green; outline:1px solid gray">&nbsp</span>
+    <span style="background:black; outline:1px solid gray">&nbsp</span>
+    <span style="background:white; outline:1px solid gray">&nbsp</span>
+    <p>
+    FIELDWORK stands in solidarity with the people of Palestine and with all people resisting oppression, apartheid, genocide, and erasure.
+    </p>
+    <p>
+    The ongoing destruction of life, land, and culture, though taking place halfway around the world from where we have our roots, is intertwined with our fight. Weapons of war are being manufactured just next door. The teaching of history and culture is being silenced to uphold false narratives. Those who speak up for the voiceless are harassed and threatened. No ground is neutral ground.
+    </p>
+    <p>
+    FLDWRK's current stewards have each found their individual ways to enact resistance and now as we return to our collective action we take a moment to affirm our shared stance and acknowledge the interconnection of these struggles.
+    </p>
+    <p>
+    FLDWRK is about our right to place and taking direct action to exercise that right. "Illicit placemaking" is "illicit" precisely because of the rules of non-access, whether it is on the extreme scale of apartheid, or in the ruins of your city, or among the invisible property lines that parcel out every inch of the earth.
+    </p>
+    <p>
+    Raving is but one way we spit in the face of these systems. Raving has always been about resistance. Obedience is the death of culture. Apologism is obedience. "What-aboutism" is antithetical to action. Get out in the street.
+    </p>
+    <p>
+    FLDWRK has never been neutral. Our stance is unmistakable whenever the right to expression, movement, and life are taken away. It's not complicated.
+    </p>
+    <p>
+    We have always been free and to the greatest extent possible we operate outside the flows of capital. Therefore, we do not call for donations; rather, we encourage you to donate directly to mutual aid funds. However, we also remind you that money is not your only voice. Read a zine. Organize an affinity group. Find others like-minded and take action in any way you can. If you don't know how, begin with a conversation, in the tradition of all great revolutions.
+    </p>
+    <p>
+    Remember that rules are merely suggestions. To be weighed against individual risk, bravery, and the power of your community.
+    The F stands for freedom.
+    </p>
+    <p>
+    Rise up.
+  </td>
+</tr>
+
+
 <tr>
-  <td colspan="2">
+  <td>
+    <img src="images/banner.jpg" style="filter:none; padding:auto;"/>
+    Src: anonymous
+  </td>
+</tr>
+
+
+<tr>
+  <td colspan="3">
     Illicit Placemaking - The art and practice of creating social, artistic, and environmental conditions out of spaces, especially found, neglected, or liminal spaces, and especially when that condition is unexpected, deviant, or creative. 
     Places may include: shopping malls, tunnels, waterfalls, astronomical observatories, soil factories, railyards, badlands, garages, warehouses, etc.
     Conditions may include raving, creating and sharing works of visual, sonic, performance or other art, and celebrating community.
@@ -168,7 +207,7 @@
     <a href="eyeblind/index.html">
     <img src="images/eyeblind.jpg" />
     </a>
-    Eyeblind || a symbol of anti-censorship, cipherpunk ethos, privacy, merging of the ego, and collective identity
+    The blindfold || a symbol of anti-surveillance, cipherpunk ethos, privacy, merging of the ego, and collective identity
   </td>
 </tr>
 
