--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
     <!-- <button data-tally-open="mRM4Lv" data-tally-width="460px"> -->
     <button>
       <a href="">
-        DAYRAVE
+        RAVE
       </a>
     </button>
-    <p>Saturday June 1 13:00</p>
-    <p>Copenhagen, Denmark</p>
+    <p>Saturday June 13 21:00</p>
+    <p>Philadelphia, Pennsylvania</p>
     <p></p>
 
     <p id="clock"></p>
     <script>
-    var countDownDate = new Date("June 1, 2024 13:00:00").getTime();
+    var countDownDate = new Date("June 13, 2024 21:00:00").getTime();
     var x = setInterval(function() {
       var now = new Date().getTime();
       var distance = countDownDate - now;
