--- a/back2school/index.html
+++ b/back2school/index.html
@@ -39,7 +39,7 @@
       </p>
       <ul style="text-align: left; margin:50px; list-style: armenian;">
         <li>Wear closed-toe shoes. The area is wet.</li>
-        <li>We highly urge you to rideshare or carpool to the destination -39.899423, -75.245632</li>
+        <li>We highly urge you to rideshare or carpool to the destination: (39.899423, -75.245632)</li>
         <li>Keep quiet! Be discreet and respect the neighbors.</li>
         <li>Turn flashlights and ringtones off until inside of the building.</li>
         <li>If driving, please park on 81st St, near Lyons Ave.</li>
